--- a/Detecting Lanes in Video.ipynb
+++ b/Detecting Lanes in Video.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -57,42 +57,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[MoviePy] >>>> Building video white.mp4\n",
-      "[MoviePy] Writing video white.mp4\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████▉| 221/222 [00:08<00:00, 25.10it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[MoviePy] Done.\n",
-      "[MoviePy] >>>> Video ready: white.mp4 \n",
-      "\n",
-      "CPU times: user 8.05 s, sys: 2.22 s, total: 10.3 s\n",
-      "Wall time: 9.23 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "input_file = \"solidWhiteRight.mp4\"\n",
-    "output_file = 'white.mp4'\n",
+    "input_file = \"solidYellowLeft.mp4\"\n",
+    "output_file = 'yellow3.mp4'\n",
     "clip1 = VideoFileClip(input_file)\n",
     "white_clip = clip1.fl_image(process_image) #NOTE: this function expects color images!!\n",
     "%time white_clip.write_videofile(output_file, audio=False)"
@@ -116,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -153,15 +126,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Process functions"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -185,11 +151,33 @@
     "    masked_color_img = region_of_interest(color_img, vertices)\n",
     "    return grayscale(masked_color_img)\n",
     "\n",
+    "\n",
+    "def get_hsv_masked_img(image):\n",
+    "    ## make copy of the image\n",
+    "    color_img = np.copy(image)\n",
+    "\n",
+    "    img = cv2.cvtColor(color_img, cv2.COLOR_RGB2HSV)\n",
+    "    #plt.imshow(hsv, cmap='hsv')\n",
+    "\n",
+    "    ## yellow lane filter\n",
+    "    yellow_min = np.array([10, 40, 80], np.uint8)\n",
+    "    yellow_max = np.array([40, 100, 140], np.uint8)\n",
+    "    yellow_mask = cv2.inRange(img, yellow_min, yellow_max)\n",
+    "    #plt.imshow(yellow_mask)\n",
+    "    \n",
+    "    ## white lane filter\n",
+    "    white_min = np.array([0, 0, 200], np.uint8)\n",
+    "    white_max = np.array([255, 80, 255], np.uint8)\n",
+    "    white_mask = cv2.inRange(img, white_min, white_max)\n",
+    "\n",
+    "    res = cv2.bitwise_and(img, img, mask=cv2.bitwise_or(yellow_mask, white_mask))\n",
+    "    return res\n",
+    "\n",
     "\"\"\" Uses canny image algorithm toreturn lane image. Resultant image is grayscale masked and only the lanes are shown\"\"\"\n",
     "def get_masked_canny_img(image):\n",
     "    ## make copy of the image\n",
-    "    canny_img = np.copy(image)\n",
-    "\n",
+    "    canny_img = get_hsv_masked_img( np.copy(image) )\n",
+    "    #canny_img = np.copy(image)\n",
     "    ## parameter\n",
     "    guassian_blur_kernel = 5\n",
     "    canny_low_threshold =50\n",
@@ -197,6 +185,10 @@
     "    img_shape= canny_img.shape\n",
     "    ## convert to grayscale\n",
     "    canny_img = grayscale(canny_img)\n",
+    "    ## improve local contrast of the image    \n",
+    "    clahe = cv2.createCLAHE(clipLimit=2.0, tileGridSize=(8,8))\n",
+    "    canny_img = clahe.apply(canny_img)\n",
+    "    \n",
     "    ## appy guassian blur with\n",
     "    canny_img = gaussian_blur(canny_img, guassian_blur_kernel)\n",
     "    ## apply canny filter \n",
@@ -305,10 +297,10 @@
     "        if ( not  p_right_lane):\n",
     "                p_right_lane = [right_func(y1), right_func(y2)]\n",
     "        ## reduce jittry effect\n",
-    "        left_x1 = int( ( left_func(y1)+ p_left_lane[0] ) /2 )\n",
-    "        left_x2 = int(( left_func(y2) + p_left_lane[1] )/2 )\n",
-    "        right_x1 = int( ( right_func(y1)+ p_right_lane[0] ) /2 )\n",
-    "        right_x2 = int( ( right_func(y2)+ p_right_lane[1] ) /2 )\n",
+    "        left_x1 = int( ( 0.3 * left_func(y1)+ 0.7 * p_left_lane[0] ) /2 )\n",
+    "        left_x2 = int(( 0.3* left_func(y2) + 0.7 * p_left_lane[1] )/2 )\n",
+    "        right_x1 = int( ( 0.3 * right_func(y1)+ 0.7*   p_right_lane[0] ) /2 )\n",
+    "        right_x2 = int( ( 0.3 * right_func(y2)+ 0.7 *p_right_lane[1] ) /2 )\n",
     "     ## Fix for when frame image has no good lane markings \n",
     "    elif(p_left_lane and p_right_lane )  : \n",
     "        left_x1 = p_left_lane[0]\n",
@@ -342,8 +334,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Process functions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -354,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "deletable": true,
